--- a/kelas-5/lembah/AKM/soal1.html
+++ b/kelas-5/lembah/AKM/soal1.html
@@ -11,6 +11,7 @@
       margin: 10px;
       background-color: #f5f9ff;
     }
+    /* Kotak judul biru */
     .judul {
       background: #007BFF;
       color: white;
@@ -21,6 +22,7 @@
       font-weight: bold;
       margin-bottom: 15px;
     }
+    /* Kotak soal putih */
     .soal {
       background: #fff;
       padding: 20px;
@@ -51,35 +53,95 @@
       cursor: pointer;
       transition: background 0.3s;
     }
-    .pilihan div:hover { background: #e0e0e0; }
-    .gambar { text-align: center; margin: 15px 0; }
+    .pilihan div:hover {
+      background: #e0e0e0;
+    }
+    .gambar {
+      text-align: center;
+      margin: 15px 0;
+    }
+    /* Gambar soal lebih kecil */
     .gambar img {
       max-width: 250px;
       height: auto;
       border: 2px solid #ddd;
       border-radius: 8px;
     }
+    /* Gambar opsi jawaban lebih kecil */
     .pilihan img {
       max-width: 120px;
       height: auto;
       border-radius: 6px;
       border: 1px solid #ccc;
     }
-    .feedback { margin-top: 15px; font-weight: bold; font-size: 1.1rem; }
-    .benar { color: green; }
-    .salah { color: red; }
-    .btn-pembahasan {
+    .feedback {
       margin-top: 15px;
+      font-weight: bold;
+      font-size: 1.1rem;
+    }
+    .benar {
+      color: green;
+    }
+    .salah {
+      color: red;
+    }
+    .btn-pembahasan {
       display: none;
+      margin-top: 15px;
       padding: 10px 16px;
-      background: #007BFF;
+      background-color: #007BFF;
       color: white;
       border: none;
       border-radius: 8px;
       cursor: pointer;
       font-weight: bold;
     }
-    .btn-pembahasan:hover { background: #0056b3; }
+    .btn-pembahasan:hover {
+      background-color: #0056b3;
+    }
+    /* Modal */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      left: 0; top: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.6);
+      justify-content: center;
+      align-items: center;
+      padding: 10px;
+    }
+    .modal-content {
+      background: white;
+      border-radius: 12px;
+      max-width: 800px;
+      width: 100%;
+      padding: 15px;
+      text-align: center;
+    }
+    .modal iframe {
+      width: 100%;
+      height: 400px;
+      border-radius: 8px;
+    }
+    .modal-buttons {
+      margin-top: 10px;
+      display: flex;
+      justify-content: space-between;
+    }
+    .btn-stop, .btn-close {
+      padding: 8px 16px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: bold;
+      color: white;
+    }
+    .btn-stop { background: #d9534f; }
+    .btn-stop:hover { background: #c9302c; }
+    .btn-close { background: #5cb85c; }
+    .btn-close:hover { background: #449d44; }
+    /* Tombol navigasi */
     .navigasi {
       margin-top: 25px;
       display: flex;
@@ -92,54 +154,46 @@
       font-weight: bold;
       transition: 0.3s;
     }
-    .btn-kembali { background-color: #d9534f; color: white; }
-    .btn-kembali:hover { background-color: #c9302c; }
-    .btn-lanjut { background-color: #5cb85c; color: white; }
-    .btn-lanjut:hover { background-color: #449d44; }
-
-    /* === Modal (kotak melayang) === */
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 9999;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0,0,0,0.6);
-      justify-content: center;
-      align-items: center;
+    .btn-kembali {
+      background-color: #d9534f;
+      color: white;
     }
-    .modal-content {
-      background: #fff;
-      padding: 20px;
-      border-radius: 12px;
-      max-width: 700px;
-      width: 90%;
-      text-align: center;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-      animation: fadeIn 0.3s ease;
+    .btn-kembali:hover {
+      background-color: #c9302c;
     }
-    .video-controls {
-      margin-top: 10px;
-      display: flex;
-      justify-content: space-between;
+    .btn-lanjut {
+      background-color: #5cb85c;
+      color: white;
     }
-    .video-controls button {
-      padding: 8px 14px;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      font-weight: bold;
+    .btn-lanjut:hover {
+      background-color: #449d44;
     }
-    .btn-stop { background: #d9534f; color: white; }
-    .btn-stop:hover { background: #c9302c; }
-    .btn-close { background: #5cb85c; color: white; }
-    .btn-close:hover { background: #449d44; }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: scale(0.9); }
-      to { opacity: 1; transform: scale(1); }
+    /* Responsif */
+    @media (max-width: 600px) {
+      .soal {
+        padding: 12px;
+      }
+      .judul {
+        font-size: 1.3rem;
+        padding: 12px;
+      }
+      h2 {
+        font-size: 1rem;
+      }
+      .pilihan div {
+        font-size: 0.9rem;
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      .gambar img {
+        max-width: 180px;
+      }
+      .pilihan img {
+        max-width: 100px;
+      }
+      .modal iframe {
+        height: 220px;
+      }
     }
   </style>
 </head>
@@ -148,7 +202,6 @@
 
   <div class="soal">
     <h2>Soal Latihan 1</h2>
-
     <p>Dimas, Suta dan Beta bermain susun balok dengan cara menyusun balok sesuai pola. 
       Wasit akan meletakkan balok-balok yang masing-masing berisi satu bilangan pada 
       lapisan paling bawah, kemudian pemain melanjutkan menyusun balok-balok pada 
@@ -158,25 +211,21 @@
     <div class="gambar">
       <img src="https://i.imgur.com/eP8QBmi.png" alt="Contoh Susun Balok">
     </div>
-
-    <p>Wasit meletakkan empat kotak pada lapisan pertama seperti gambar.</p>
-
+    <p>Wasit meletakkan empat kotak...</p>
     <div class="gambar">
       <img src="https://i.imgur.com/mMsd3yB.png" alt="Lapisan Pertama">
     </div>
 
     <p>Tiga kotak yang harus diletakkan di atasnya adalah ....</p>
     <div class="pilihan">
-      <div onclick="cekJawaban('A')">A. <img src="https://i.imgur.com/MIQ8OiX.png"></div>
-      <div onclick="cekJawaban('B')">B. <img src="https://i.imgur.com/FGFcOI4.png"></div>
-      <div onclick="cekJawaban('C')">C. <img src="https://i.imgur.com/ZoYJLOo.png"></div>
-      <div onclick="cekJawaban('D')">D. <img src="https://i.imgur.com/G2yh6dj.png"></div>
+      <div onclick="cekJawaban('A')">A. <img src="https://i.imgur.com/MIQ8OiX.png" alt="Opsi A"></div>
+      <div onclick="cekJawaban('B')">B. <img src="https://i.imgur.com/FGFcOI4.png" alt="Opsi B"></div>
+      <div onclick="cekJawaban('C')">C. <img src="https://i.imgur.com/ZoYJLOo.png" alt="Opsi C"></div>
+      <div onclick="cekJawaban('D')">D. <img src="https://i.imgur.com/G2yh6dj.png" alt="Opsi D"></div>
     </div>
 
     <div id="feedback" class="feedback"></div>
-
-    <!-- Tombol pembahasan -->
-    <button id="btnPembahasan" class="btn-pembahasan" onclick="tampilkanPembahasan()">📘 Lihat Pembahasan</button>
+    <button id="btnPembahasan" class="btn-pembahasan" onclick="bukaPembahasan()">Pembahasan</button>
 
     <div class="navigasi">
       <a href="AKM.html" class="btn-kembali">⬅ Kembali</a>
@@ -184,52 +233,22 @@
     </div>
   </div>
 
-  <!-- Modal (kotak melayang) -->
+  <!-- Modal Pembahasan -->
   <div id="modalPembahasan" class="modal">
     <div class="modal-content">
-      <h3>Pembahasan:</h3>
-      <div id="player"></div>
-      <div class="video-controls">
+      <iframe id="youtubePlayer" src="" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <div class="modal-buttons">
         <button class="btn-stop" onclick="stopVideo()">⏹ Stop</button>
-        <button class="btn-close" onclick="closeVideo()">❌ Keluar</button>
+        <button class="btn-close" onclick="tutupPembahasan()">❌ Keluar</button>
       </div>
     </div>
   </div>
 
-  <!-- Load YouTube API -->
-  <script src="https://www.youtube.com/iframe_api"></script>
   <script>
     let player;
-    let startTime = 94;   // 1:34 dalam detik
-    let endTime = 192;    // 3:12 dalam detik
-    let checkInterval;
-
-    function onYouTubeIframeAPIReady() {
-      player = new YT.Player('player', {
-        height: '315',
-        width: '560',
-        videoId: 'wq-EkXMM83E',
-        playerVars: { autoplay: 0, controls: 1 },
-        events: { 'onStateChange': onPlayerStateChange }
-      });
-    }
-
-    function onPlayerStateChange(event) {
-      if (event.data == YT.PlayerState.PLAYING) {
-        clearInterval(checkInterval);
-        checkInterval = setInterval(() => {
-          if (player.getCurrentTime() >= endTime) {
-            player.pauseVideo();
-            clearInterval(checkInterval);
-          }
-        }, 500);
-      }
-    }
-
     function cekJawaban(pilihan) {
       let feedback = document.getElementById("feedback");
       let btnPembahasan = document.getElementById("btnPembahasan");
-
       if (pilihan === "A") {
         feedback.innerHTML = "🎉 Jawaban Benar!";
         feedback.className = "feedback benar";
@@ -237,22 +256,23 @@
         feedback.innerHTML = "😅 Coba lagi!";
         feedback.className = "feedback salah";
       }
-      btnPembahasan.style.display = "inline-block"; // tampilkan tombol pembahasan
+      btnPembahasan.style.display = "inline-block";
     }
 
-    function tampilkanPembahasan() {
-      let modal = document.getElementById("modalPembahasan");
-      modal.style.display = "flex";
-      player.seekTo(startTime);
-      player.playVideo();
+    function bukaPembahasan() {
+      document.getElementById("modalPembahasan").style.display = "flex";
+      let iframe = document.getElementById("youtubePlayer");
+      iframe.src = "https://www.youtube.com/embed/wq-EkXMM83E?start=94&end=192&autoplay=1";
     }
 
     function stopVideo() {
-      if (player) player.pauseVideo();
+      let iframe = document.getElementById("youtubePlayer");
+      iframe.src = iframe.src; // reload untuk stop
     }
 
-    function closeVideo() {
-      stopVideo();
+    function tutupPembahasan() {
+      let iframe = document.getElementById("youtubePlayer");
+      iframe.src = "";
       document.getElementById("modalPembahasan").style.display = "none";
     }
   </script>
