--- a/kelas-5/lembah/AKM/AKM.html
+++ b/kelas-5/lembah/AKM/AKM.html
@@ -77,25 +77,25 @@ h1 img {
     <select id="menuLatihan" onchange="pilihLatihan()">
         <option value="">-- Pilih Latihan --</option>
         <option value="soal1.html">Latihan ANBK 1</option>
-        <option value="latihan2.html">Latihan ANBK 2</option>
-        <option value="latihan3.html">Latihan ANBK 3</option>
-        <option value="latihan4.html">Latihan ANBK 4</option>
-        <option value="latihan5.html">Latihan ANBK 5</option>
-        <option value="latihan6.html">Latihan ANBK 6</option>
-        <option value="latihan7.html">Latihan ANBK 7</option>
-        <option value="latihan8.html">Latihan ANBK 8</option>
-        <option value="latihan9.html">Latihan ANBK 9</option>
-        <option value="latihan10.html">Latihan ANBK 10</option>
-        <option value="latihan11.html">Latihan ANBK 11</option>
-        <option value="latihan12.html">Latihan ANBK 12</option>
-        <option value="latihan13.html">Latihan ANBK 13</option>
-        <option value="latihan14.html">Latihan ANBK 14</option>
-        <option value="latihan15.html">Latihan ANBK 15</option>
-        <option value="latihan16.html">Latihan ANBK 16</option>
-        <option value="latihan17.html">Latihan ANBK 17</option>
-        <option value="latihan18.html">Latihan ANBK 18</option>
-        <option value="latihan19.html">Latihan ANBK 19</option>
-        <option value="latihan20.html">Latihan ANBK 20</option>
+        <option value="soal2.html">Latihan ANBK 2</option>
+        <option value="soal3.html">Latihan ANBK 3</option>
+        <option value="soal4.html">Latihan ANBK 4</option>
+        <option value="soal5.html">Latihan ANBK 5</option>
+        <option value="soal6.html">Latihan ANBK 6</option>
+        <option value="soal7.html">Latihan ANBK 7</option>
+        <option value="soal8.html">Latihan ANBK 8</option>
+        <option value="soal9.html">Latihan ANBK 9</option>
+        <option value="soal10.html">Latihan ANBK 10</option>
+        <option value="soal11.html">Latihan ANBK 11</option>
+        <option value="soal12.html">Latihan ANBK 12</option>
+        <option value="soal13.html">Latihan ANBK 13</option>
+        <option value="soal14.html">Latihan ANBK 14</option>
+        <option value="soal15.html">Latihan ANBK 15</option>
+        <option value="soal16.html">Latihan ANBK 16</option>
+        <option value="soal17.html">Latihan ANBK 17</option>
+        <option value="soal18.html">Latihan ANBK 18</option>
+        <option value="soal19.html">Latihan ANBK 19</option>
+        <option value="soal20.html">Latihan ANBK 20</option>
     </select>
 </div>
 
@@ -110,6 +110,7 @@ function pilihLatihan() {
 </script>
 </body>
 </html>
+
 
 
 
