--- a/kelas-5/lembah/AKM/soal3.html
+++ b/kelas-5/lembah/AKM/soal3.html
@@ -154,12 +154,12 @@
 
     function kembali() {
       // ganti sesuai link halaman sebelumnya
-      window.location.href = "sebelumnya.html";
+      window.location.href = "AKM.html";
     }
 
     function lanjut() {
       // ganti sesuai link halaman selanjutnya
-      window.location.href = "selanjutnya.html";
+      window.location.href = "AKM.html";
     }
   </script>
 </body>
