--- a/kelas-5/lembah/AKM/soal3.html
+++ b/kelas-5/lembah/AKM/soal3.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="id">
 <head>
   <meta charset="UTF-8">
@@ -38,7 +38,7 @@
       cursor: pointer;
       margin: 5px;
       display: inline-block;
-      width: auto; /* tombol sepanjang teks */
+      width: auto;
     }
     /* Tombol khusus */
     #kirimBtn { background: #007bff; color: white; }
@@ -48,9 +48,15 @@
     /* Navigasi */
     .navigasi {
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
+      align-items: center;
       margin-top: 12px;
       flex-wrap: wrap;
+      gap: 12px;
+    }
+    .navigasi img {
+      width: 480px; /* diperbesar 4x */
+      height: auto;
     }
     /* Popup */
     .overlay {
@@ -113,6 +119,7 @@
   <!-- Tombol Navigasi -->
   <div class="navigasi">
     <button class="btn-kembali" onclick="kembali()">⬅ Kembali</button>
+    <img src="https://i.imgur.com/LqQVDoS.png" alt="Logo Tengah">
     <button class="btn-lanjut" onclick="lanjut()">Selanjutnya ➡</button>
   </div>
 
@@ -153,12 +160,10 @@
     }
 
     function kembali() {
-      // ganti sesuai link halaman sebelumnya
       window.location.href = "AKM.html";
     }
 
     function lanjut() {
-      // ganti sesuai link halaman selanjutnya
       window.location.href = "AKM.html";
     }
   </script>
